force-app/main/default/objects/Case/fields/CRM_In_Queue__c.field-meta.xml
<CustomField>
    <fullName>CRM_In_Queue__c</fullName>
    <formula>BEGINS(OwnerId, &apos;00G&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Queue</label>
    <type>Checkbox</type>
</CustomField>