force-app/main/default/objects/Case/fields/CRM_Person_Confidentiality__c.field-meta.xml
<CustomField>
    <fullName>CRM_Person_Confidentiality__c</fullName>
    <label>Person Confidentiality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UGRADERT</fullName>
            </value>
            <value>
                <fullName>FORTROLIG</fullName>
            </value>
            <value>
                <fullName>STRENGT_FORTROLIG_UTLAND</fullName>
            </value>
            <value>
                <fullName>STRENGT_FORTROLIG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>