force-app/main/default/objects/Case/fields/CRM_Person_Is_NAV_Employee__c.field-meta.xml
<CustomField>
    <fullName>CRM_Person_Is_NAV_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Person Is Nav Employee</label>
    <type>Checkbox</type>
</CustomField>