force-app/main/default/objects/Case/fields/CRM_Status_Image__c.field-meta.xml
<CustomField>
    <fullName>CRM_Status_Image__c</fullName>
    <description>Displays a badge of the current Status for the case</description>
    <formula>CASE(Status,
&apos;New&apos;, IMAGE(&apos;/resource/caseStatusOpen&apos;, &apos;Åpen&apos;, 22, 44),
&apos;Escalated&apos;, IMAGE(&apos;/resource/caseStatusOpen&apos;, &apos;Åpen&apos;, 22, 44),
&apos;Forwarded&apos;, IMAGE(&apos;/resource/caseStatusOpen&apos;, &apos;Åpen&apos;, 22, 44),
&apos;On Hold&apos;, IMAGE(&apos;/resource/caseStatusAnswered&apos;, &apos;Besvart&apos;, 22, 58),
&apos;In progress&apos;, IMAGE(&apos;/resource/caseStatusinProgress&apos;, &apos;Under Arbeid&apos;, 22, 86),
&apos;Reserved&apos;, IMAGE(&apos;/resource/caseStatusinProgress&apos;, &apos;Under Arbeid&apos;, 22, 86),
&apos;Closed&apos;, IMAGE(&apos;/resource/caseStatusClosed&apos;, &apos;Lukket&apos;, 22, 53),
&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Image</label>
    <type>Text</type>
</CustomField>