force-app/main/default/objects/Case/fields/NKS_Case_Origin__c.field-meta.xml
<CustomField>
    <fullName>NKS_Case_Origin__c</fullName>
    <description>Used to simplify &quot;STO_Case_Set_Owner&quot; flow by the use of &quot;IN&quot; operator.</description>
    <formula>TEXT(Origin)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NKS Case Origin</label>
    <type>Text</type>
</CustomField>