force-app/main/default/objects/Case/fields/NKS_Incompetent_IDs__c.field-meta.xml
<CustomField>
    <fullName>NKS_Incompetent_IDs__c</fullName>
    <description>Text field to remember user ids when STO is set as incompetent.</description>
    <label>Incompetent IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>