force-app/main/default/objects/Case/fields/STO_Additional_Skills__c.field-meta.xml
<CustomField>
    <fullName>STO_Additional_Skills__c</fullName>
    <label>Additional Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Serviceklage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>