force-app/main/default/objects/Case/fields/STO_Requires_Serviceklager_Skill__c.field-meta.xml
<CustomField>
    <fullName>STO_Requires_Serviceklager_Skill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Serviceklager Skill</label>
    <type>Checkbox</type>
</CustomField>