force-app/main/default/objects/Case/recordTypes/STO_Case.recordType-meta.xml
<RecordType>
    <fullName>STO_Case</fullName>
    <active>true</active>
    <businessProcess>STO Support Process</businessProcess>
    <label>STO Case</label>
</RecordType>